[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starchaser"
dynamic = ["version"]
description = 'Reach for the stars'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Ming Chung", email = "73884404+minchus@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "altair",
  "numpy",
  "pandas",
  "streamlit",
  "st-gsheets-connection"
]

[project.urls]
Documentation = "https://github.com/unknown/starchaser#readme"
Issues = "https://github.com/unknown/starchaser/issues"
Source = "https://github.com/unknown/starchaser"

[project.scripts]
scrape = "scrape.cli:do_scrape"

[tool.hatch.version]
path = "src/starchaser/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "beautifulsoup4",
  "click",
  "lxml",
  "line_profiler_pycharm",
  "requests",
  "requests_cache",
  "requests_ratelimiter",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/starchaser tests}"

[tool.coverage.run]
source_pkgs = ["starchaser", "tests"]
branch = true
parallel = true
omit = [
  "src/starchaser/__about__.py",
]

[tool.coverage.paths]
starchaser = ["src/starchaser", "*/starchaser/src/starchaser"]
tests = ["tests", "*/starchaser/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
